# GPT

./: .gitignore  README.md
01_Lchain/: README.md  a.txt  hugging.py  index.py  main.py  pyproject.toml
02_restaurant_name_generator/: README.md  langchain_helper.py  main.py  pyproject.toml
03_rag_read_from_pdf/: a.py  combined_solution.py  jd.txt  main.ipynb  main.py  pyproject.toml  requirements.txt
04_api/: makefile  pyproject.toml  requirements.txt
04_api/src/: main.py
04_api/src/ai_model/: helper.py  routers.py  schema.py  services.py
04_api/src/auth/: routers.py
05_fe_next/core/: package-lock.json  package.json
05_fe_next/core/src/: middleware.ts
05_fe_next/core/src/app/: layout.tsx  middleware.ts  page.tsx
05_fe_next/core/src/app/api/products/: route.ts  schema.ts
05_fe_next/core/src/app/auth/: AuthProvider.tsx  LoginForm.tsx  LogoutButton.tsx  page.tsx
05_fe_next/core/src/components/: Navbar.tsx  ResponseJD.tsx  ResumeJDUploader.tsx
05_fe_next/core/src/utils/: api.ts
06_AI_chain/: hugging_face.py  main.py  pyproject.toml  requirements.txt
07_next_auth_credentials/: package-lock.json  package.json  tsconfig.json
07_next_auth_credentials/src/: middleware.ts
07_next_auth_credentials/src/app/: layout.tsx  page.tsx
07_next_auth_credentials/src/app/api/posts/: route.ts
07_next_auth_credentials/src/app/auth/: AuthProvider.tsx
07_next_auth_credentials/src/app/auth/signin/: page.tsx
07_next_auth_credentials/types/: next-auth.d.ts
08_react/: package-lock.json  package.json
08_react/src/: App.tsx  Home.tsx  main.tsx
08_react/src/components/: Alert.tsx  Button.tsx  ErrorPage.tsx  ExpenseForm.tsx  ExpenseTable.tsx  NavBar.tsx  SelectInput.tsx  User.tsx  UserDetail.tsx
08_react/src/hooks/: useAuth.ts
08_react/src/routes/: Layout.tsx  PrivateRoutes.tsx  route.tsx
(+2 files in other folders)
