[project]
name = "04-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chardet>=5.2.0",
    "faiss-cpu>=1.11.0",
    "fastapi[standard]>=0.115.13",
    "langchain>=0.3.26",
    "langchain-community>=0.3.26",
    "langchain-core>=0.3.66",
    "langchain-ollama>=0.3.3",
    "pymupdf>=1.26.1",
    "pypdf>=5.6.0",
    "uvicorn>=0.34.3",
]
